# mini-claw-code

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh.md
.github/workflows/: ci.yml  deploy-book.yml
archive/: README.md
archive/v1-tests/: README.md
claw-code/: Cargo.toml
claw-code-book/: book.toml
claw-code-book/src/: SUMMARY.md  ch00-overview.md  ch01-messages-types.md  ch02-provider-streaming.md  ch03-tool-interface.md  ch04-query-engine.md  ch05-system-prompt.md  ch06-file-tools.md  ch07-bash-tool.md  ch08-search-tools.md  ch09-tool-registry.md  ch10-permissions.md  ch11-safety.md  ch12-hooks.md  ch13-plan-mode.md  ch14-settings.md  ch15-instructions.md  (+6 more)
claw-code/examples/: chat.rs
claw-code/src/: lib.rs
claw-code/src/agents/: mod.rs
claw-code/src/config/: mod.rs
claw-code/src/engine/: mod.rs  query.rs  streaming.rs
claw-code/src/hooks/: mod.rs
claw-code/src/mcp/: mod.rs
claw-code/src/permission/: mod.rs
claw-code/src/prompt/: instructions.rs  mod.rs  sections.rs
claw-code/src/provider/: mock.rs  mod.rs  openrouter.rs
claw-code/src/tests/: ch1.rs  ch10.rs  ch11.rs  ch12.rs  ch13.rs  ch14.rs  ch15.rs  ch2.rs  ch3.rs  ch4.rs  ch5.rs  ch6.rs  ch7.rs  ch8.rs  ch9.rs  mod.rs
claw-code/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
claw-code/src/types/: message.rs  mod.rs  permission.rs  tool.rs  usage.rs
mini-claw-code/: Cargo.toml
mini-claw-code-book/: book.toml  custom.css
mini-claw-code-book-zh/: book.toml  language-switcher.js
mini-claw-code-starter/: Cargo.toml
mini-code-book/: book.toml
(+241 files in other folders)
